<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="8"
    android:background="#000000"
    tools:context="com.creditcard.MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_weight="3"
    android:weightSum="3"
    android:layout_marginBottom="10dp"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="3"
    android:layout_weight="1"
    android:layout_margin="2dp"
    android:background="#000000">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/initialbalance"
        android:textColor="#FFFFFF" />
    <EditText
        android:layout_width="fill_parent"
        android:layout_weight="2"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:background="@drawable/edit_text_corner"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_weight="1"
        android:layout_margin="2dp"
        android:background="#000000">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/interestrate"
            android:textColor="#FFFFFF" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="@drawable/edit_text_corner"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_weight="1"
        android:layout_margin="2dp"
        android:background="#000000">

        <TextView
            android:layout_width="fill_parent"
            android:gravity="center_vertical"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/minpaymet"
            android:textColor="#FFFFFF" />
        <EditText
            android:layout_width="fill_parent"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="@drawable/edit_text_corner"/>
    </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="3"
        android:weightSum="3"
        android:layout_marginBottom="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_weight="1"
        android:layout_margin="2dp"
        android:background="#000000">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/finalbalance"
            android:textColor="#FFFFFF" />
        <EditText
            android:layout_width="fill_parent"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="@drawable/edit_text_corner"/>
    </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_weight="1"
        android:layout_margin="2dp"
        android:background="#000000">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/Monthsremaining"
                android:textColor="#FFFFFF" />

            <EditText
            android:layout_width="fill_parent"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="@drawable/edit_text_corner"/>
    </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_weight="1"
        android:layout_margin="2dp"
        android:background="#000000">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/interestpaid"
                android:textColor="#FFFFFF" />
            <EditText
            android:layout_width="fill_parent"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="@drawable/edit_text_corner"/>
    </LinearLayout>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="2"
        android:weightSum="2"
        android:layout_margin="2dp"
        android:background="#000000">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/compute" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear" />
    </LinearLayout>

</LinearLayout>
